sas-core/main/default/objects/Flight_Delay_Certificate_Request__c/Flight_Delay_Certificate_Request__c.object-meta.xml
<CustomObject>
    <description>Object to store information about a request. Used to generate the actual Flight Delay Certificate as a PDF</description>
    <label>Flight Delay Certificate Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Flight Delay Certificate Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flight Delay Certificate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>