sas-core/main/default/objects/Flight_Delay_Certificate_Request__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>