sas-core/main/default/objects/Flight_Delay_Certificate_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Flight Delay Certificate Requests</relationshipLabel>
    <relationshipName>Flight_Delay_Certificate_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>