sas-core/main/default/objects/Flight_Delay_Certificate_Request__c/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <label>Contact First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>